force-app/main/default/objects/Leave_Request__c/fields/Auto_Approval_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Approval Trigger</label>
    <type>Checkbox</type>
</CustomField>