force-app/main/default/objects/Leave_Request__c/fields/Half_Day_Applies_To__c.field-meta.xml
<CustomField>
    <fullName>Half_Day_Applies_To__c</fullName>
    <label>Half Day Applies To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>First Day</fullName>
            </value>
            <value>
                <fullName>Last Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>