force-app/main/default/objects/Leave_Request__c/fields/Leave_Duration__c.field-meta.xml
<CustomField>
    <fullName>Leave_Duration__c</fullName>
    <label>Leave Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FULL DAY</fullName>
                <default>true</default>
                <label>FULL DAY</label>
            </value>
            <value>
                <fullName>HALF DAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>