force-app/main/default/objects/Leave_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUBMITTED</fullName>
                <default>true</default>
                <label>SUBMITTED</label>
            </value>
            <value>
                <fullName>MANAGER_APPROVED</fullName>
                <label>MANAGER APPROVED</label>
            </value>
            <value>
                <fullName>HR APPROVED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
                <isActive>false</isActive>
                <label>PENDING</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>