force-app/main/default/objects/Leave_Request__c/validationRules/Prevent_Duration_Conflict.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duration_Conflict</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  TEXT(Leave_Duration__c) = &quot;Half Day&quot;,
  TEXT(Half_Day_Applies_To__c) &lt;&gt; &quot;None&quot;
)</errorConditionFormula>
    <errorDisplayField>Half_Day_Applies_To__c</errorDisplayField>
    <errorMessage>Choose either single-day Half Day OR specify Half Day applies to First/Last when multi-day. Do not use both.</errorMessage>
</ValidationRule>