force-app/main/default/objects/Leave_Request__c/validationRules/Validate_EndDate_After_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_EndDate_After_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be before Start Date.</errorMessage>
</ValidationRule>